# session3

./: CMakeLists.txt
src/: main.cpp
src/core/: CMakeLists.txt  Logger.h  Types.h
src/effects/: CMakeLists.txt
src/renderer/: VulkanContext.h  VulkanRenderer.cpp
src/timeline/: CMakeLists.txt  Clip.cpp  Clip.h  Sequence.cpp  Timeline.cpp  Timeline.h  Track.cpp  Track.h
src/ui/: TimelineWidget.cpp
src/video/: CMakeLists.txt  FrameConverter.cpp  FrameConverter.h  VideoDecoder.cpp  VideoDecoder.h  VideoEncoder.cpp  VideoEncoder.h
